reworked sessions, added basic User PUT API

--- a/src/BGBackend/BrowserGameBackend.csproj
+++ b/src/BGBackend/BrowserGameBackend.csproj
@@ -37,4 +37,10 @@
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Filters\" />
+    <Folder Include="Migrations\" />
+    <Folder Include="Types\ActionResults\" />
+  </ItemGroup>
+
 </Project>
