added galaxy generation options, moved tools to interfaces, reformatting

--- a/src/BGBackend/appsettings.json
+++ b/src/BGBackend/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "GalaxyOptions": {
+    "GalaxySize": 10000, //has to be square of GalaxyWidth
+    "GalaxyWidth": 100,
+    "SectorSize": 100,
+    "MinBotPlanets": 3,
+    "MaxBotPlanets": 9,
+    "MaxPlanetSize": 50,
+    "MinPlanetResources": 5,
+    "FleetTemplateDifficulty": 6, //Higher fleet numbers have better composition, 99 is max
+    "PercentageBotControlledSystems": 0.2
+  }
 }
