--- a/src/BGBackend/appsettings.json
+++ b/src/BGBackend/appsettings.json
@@ -15,6 +15,8 @@
     "MaxPlanetSize": 50,
     "MinPlanetResources": 5,
     "FleetTemplateDifficulty": 6, //Higher fleet numbers have better composition, 99 is max
-    "PercentageBotControlledSystems": 0.2
+    "PercentageBotControlledSystems": 0.2,
+    "LeaveFreeMin": 1,
+    "LeaveFreeMax": 3
   }
 }
